Clean up lombok usage